--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Currency Converter</title>
+    <title>Convert My Money</title>
 </head>
 <body>
     <div class="container">
         <div class="header">
-          <h1>Currency Converter</h1>
+          <h1>Convert My Money</h1>
         </div>
         <div class="date"></div>
         <ul class="currencies"></ul>
