--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
-          <h1>Convert My Money</h1>
+          <h1><span style="color: rgb(0, 153, 255);">Convert My Money</span></h1>
         </div>
         <div class="date"></div>
         <ul class="currencies"></ul>
@@ -18,5 +18,6 @@
       </div>
       <script src="test.js"></script>
 </body>
-<footer class="caption">This Project Made by Wael Ogua With &hearts;</footer>
+<footer class="caption"><span style="color: blanchedalmond;">Project Made by Wael Ogua With &hearts;</span> 
+</footer>
 </html>
